# report-insight

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  env.example  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  deps.py  error_handlers.py  labels.py  main.py  schemas.py  sse.py
app/api/routers/: admin_ui.py  audit_ui.py  health.py  monthly.py  monthly_ui.py  reports.py  scenario_ui.py  search.py  ui.py
app/api/static/: app.css
app/api/templates/: _report_detail.html  _reports_table.html  _scenario_result.html  _topbar.html  admin.html  audit.html  monthly_detail.html  monthly_list.html  scenarios.html
app/core/: __init__.py  config.py  db.py  di.py  logging.py
app/domain/: __init__.py  entities.py  errors.py  labels.py  values.py
app/infra/: __init__.py
app/infra/aws/: __init__.py  client.py  s3.py  sqs.py
app/infra/db/: __init__.py  mappers.py  models.py  repositories.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 0001_initial.py
app/infra/embedding/: __init__.py  download.py  fake_client.py  fastembed_client.py
app/infra/llm/: __init__.py  anthropic_client.py  fake_client.py
app/infra/llm/prompts/: __init__.py  answer_v1.yaml  classify_v1.yaml  monthly_v1.yaml
app/infra/masking/: __init__.py  pii.py
app/infra/notify/: __init__.py  slack.py
app/infra/observability/: __init__.py  emf.py
app/infra/pdf/: __init__.py  renderer.py
app/infra/text/: __init__.py  normalize.py
app/services/: __init__.py  admin.py  ingest.py  monthly.py  ports.py  search.py
app/worker/: __init__.py  main.py
docs/: 01_requirements.md  02_basic_design.md  03_api_design.md  04_db_design.md  05_llm_design.md  06_architecture.md  07_coding_standards.md  08_dev_setup.md  09_cicd_devsecops.md  10_test_plan.md  11_iac_strategy.md  12_uat_cases.md  runbook.md
docs/adr/: ADR-001-vector-store.md  ADR-002-compute.md  ADR-003-llm-strategy.md  ADR-004-iac-tool.md
docs/mockups/: README.md  admin.html  audit.html  checklist.html  index.html  mock-data.js  mock.css  monthly-edit.html  monthly-list.html  pipeline.html  submit.html  testcases.js
docs/plan/: p2-step3-normalizer-wiring_plan.md  p3-vpc-endpoints-prod_plan.md  p4-egress-zero-trust_plan.md  portfolio-presentation_handoff.md  report-insight-1day_plan.md  report-insight-p1-followup_handoff.md  report-insight-p1_plan.md  uat-screens-and-scenarios_plan.md
docs/presentations/: ReportInsight_ユーザー向けガイド.pptx  ReportInsight_運用ハンドブック.pptx
scripts/: check_mermaid.mjs  export_corrections.py  gen_uat_doc.mjs  localstack-init.sh  seed_demo.py  synth.py
terraform/: .trivyignore  README.md
terraform/envs/dev/: backend.tf  main.tf  outputs.tf  providers.tf  versions.tf
terraform/envs/prod/: backend.tf  main.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/pipeline/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  test_admin_pipeline.py  test_ingest_pipeline.py  test_monthly_pipeline.py  test_search_pipeline.py
tests/llm_eval/: __init__.py  datasets.py  evaluators.py  golden_corrections.json  loop_demo.py  metrics.py  regression.py  run.py
tests/pdf/: test_pdf_rendering.py
tests/scenarios/: run.py  runner.py  test_scenarios.py
tests/scenarios/cases/: 01_urgent_and_queue.json  02_dedup.json  03_pii_masking.json
tests/unit/: fakes.py  test_admin.py  test_ingest.py  test_llm_eval.py  test_masking.py  test_metrics_emf.py  test_monthly.py  test_p1_degradation_loop.py  test_search.py
tools/: webhook_mock.py
tools/benchmarks/pgvector/: README.md  bench.py  bench_results.json
